logs/Slang/generated/hdlconv/hdlconvertor_p188_3.sv.log
name: hdlconvertor_p188_3
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p188_3.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p188_3.sv:1:1: error: language feature not yet supported
class Outer;
^~~~~~~~~~~~
